src/config/service/http/snapshots/roadster__config__service__http__default_routes__deserialize_tests__auth@case_1.snap
---
source: src/config/service/http/default_routes.rs
expression: default_routes
---
default-enable = true

[ping]
route = '_ping'

[health]
route = '_health'

[api-schema]
route = '_docs/api.json'

[scalar]
route = '_docs'

[redoc]
route = '_docs/redoc'
