src/config/service/http/snapshots/roadster__config__service__http__default_routes__deserialize_tests__auth@case_2.snap
---
source: src/config/service/http/default_routes.rs
expression: default_routes
---
default-enable = false

[ping]
enable = true
route = '_ping'

[health]
enable = true
route = '_health'

[api-schema]
enable = true
route = '_docs/api.json'

[scalar]
enable = true
route = '_docs'

[redoc]
enable = true
route = '_docs/redoc'
