src/config/service/http/snapshots/roadster__config__service__http__default_routes__deserialize_tests__auth@case_4.snap
---
source: src/config/service/http/default_routes.rs
expression: default_routes
---
default-enable = false

[ping]
route = 'a'

[health]
route = 'b'

[api-schema]
route = 'c'

[scalar]
route = 'd'

[redoc]
route = 'e'
