src/config/service/http/snapshots/roadster__config__service__http__default_routes__deserialize_tests__auth@case_5.snap
---
source: src/config/service/http/default_routes.rs
expression: default_routes
---
default-enable = true

[ping]
enable = true
route = 'a'

[health]
enable = true
route = 'b'

[api-schema]
enable = true
route = 'c'

[scalar]
enable = true
route = 'd'

[redoc]
enable = true
route = 'e'
